; ModuleID = '/home/carl/AnghaBench/kphp-kdb/drinkless/extr_dl-treap.c_dl_trp_incr.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/drinkless/extr_dl-treap.c_dl_trp_incr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dl_trp_incr(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @dl_trp_del(i32* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %5, align 4
  %12 = ashr i32 %11, 16
  %13 = xor i32 %12, -1
  %14 = add nsw i32 %13, 1
  %15 = xor i32 %14, -1
  %16 = shl i32 %15, 16
  %17 = call i32 (...) @my_rand()
  %18 = and i32 %17, 65535
  %19 = or i32 %16, %18
  %20 = call i32 @dl_trp_add(i32* %9, i32 %10, i32 %19)
  ret void
}

declare dso_local i32 @dl_trp_del(i32*, i32) #1

declare dso_local i32 @dl_trp_add(i32*, i32, i32) #1

declare dso_local i32 @my_rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
